# cross-build-minigui

./: .gitignore  README.md  build_all.sh
example/: build-example.sh
example/hello_world-0.0.1/: .gitignore  config.h.in  configure.ac
example/hello_world-0.0.1/example/: Makefile.am
example/hello_world-0.0.1/include/: Makefile.am
example/hello_world-0.0.1/res/m4/: enable_cross_build.m4  enable_ths_mode.m4
example/hello_world-0.0.1/src/: Makefile.am
minigui/: build-minigui.sh
shell/: hi35xx.sh  platform.sh  ubuntu.sh
